# ftse-russell-esg-keyword

./: .gitignore  README.md  bank.py  bank_fin.py  common.py  energy.py  food.py  hospital.py  junkword.py  keywordanalysis.py  pyproject.toml  setting.py
model/: keyword.py  local_keyword.py
th_ftse_keyword_analysis/: __init__.py  ftse_keywords.json  keyword.py  keywordanalysis.py  local_keyword.py  noise.py  tfidf.py
