[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "th_ftse_keyword_analysis"
version = "0.0.1"
description = "FTSE Russell ESG keyword analysis in Thai conference transcription"
readme = "README.md"
authors = [{ name = "Nutthapong Pinrod", email = "nutthapong_nt@hotmail.com" }]
requires-python = ">=3.8"
dependencies = ["pythainlp"]

[tool.setuptools.packages.find]
where = ["."]
include = ["th_ftse_keyword_analysis"]

[tool.setuptools.package-data]
"th_ftse_keyword_analysis" = ["ftse_keywords.json"]